accept recommendation about syntax